--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -9,6 +9,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">@producto.Nombre</h5>
+                    <img src=" @producto.ImagenUrl" class="card-img-top" alt="@producto.Nombre">
                     <p class="card-text">@producto.Descripcion</p>
                     <p class="card-text">@producto.Precio.ToString("C")</p>
                     <form asp-controller="Carrito" asp-action="Agregar" method="post">
