--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Proyecto_Programacion1</title>
+    <title>@ViewData["Title"] - FAST BITE</title>
     <script type="importmap"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Proyecto_Programacion1</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FAST BITE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,47 +25,57 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" asp-controller="Catalogo" asp-action="Index">Catálogo</a>
-                        </li>
-                         <li class="nav-item"></li>
-                           <a class="nav-link" asp-controller="User" asp-action="Registro">Registro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Contacto" asp-action="Index">Contacto</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Orden" asp-action="Index">Órdenes</a>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-controller="Promociones" asp-action="Index">Promociones</a>
                         </li>
-
-
+                        @if (Context.Session.GetString("UserRole") == "Cliente")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Carrito" asp-action="Index">Carrito</a>
+                                </li>
+                        }
 
                         @if (Context.Session.GetString("UserRole") == "Admin")
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Home" asp-action="Dashboard">Dashboard</a>
-        </li>
-    }
-    @if (Context.Session.GetString("UserRole") == "Cliente")
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Home" asp-action="ClientePanel">Panel Cliente</a>
-        </li>
-    }
-    @if (Context.Session.GetString("UserRole") != null)
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Login" asp-action="Logout">Cerrar sesión</a>
-        </li>
-    }
-    else
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Login" asp-action="Index">Iniciar sesión</a>
-        </li>
-    }
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-controller="Orden" asp-action="Index">Órdenes</a>
+                                </li>
+                        }
+                        @if (Context.Session.GetString("UserRole") != "Cliente")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Registro">Registro</a>
+                                </li>
+                            }
+                        @if (Context.Session.GetString("UserRole") == "Admin")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Home" asp-action="Dashboard">Dashboard</a>
+                                </li>
+                            }
+                        @if (Context.Session.GetString("UserRole") == "Cliente")
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Home" asp-action="ClientePanel">Panel Cliente</a>
+                                </li>
+                            }
+                        @if (Context.Session.GetString("UserRole") != null)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Login" asp-action="Logout">Cerrar sesión</a>
+                                </li>
+                            }
+                        else
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Login" asp-action="Index">Iniciar sesión</a>
+                                </li>
+                            }
                     </ul>
                 </div>
             </div>  
@@ -79,7 +89,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Proyecto_Programacion1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Proyecto_Programacion1 </a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
